# ariadne

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yaml
.github/workflows/: ci.yml
ingestion/: Dockerfile  pyproject.toml  server.py
llm/: serve_model.sh
management/: .dockerignore  embeddings.py  init_collections.py  pyproject.toml  server.py  utils.py
mcp_server/: Dockerfile  pyproject.toml  server.py
processing/: Dockerfile  pyproject.toml  server.py  utils.py
scripts/: pyproject.toml  upload.py
